<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:scrollbars="vertical">

    <Button
        android:id="@+id/logout"
        android:text="@string/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners_primarydark"
        android:textColor="@color/white"
        android:layout_marginBottom="16dp"
        />

    <EditText
        android:id="@+id/old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/old_password"
        android:background="@drawable/rounded_corners_primary"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:padding="10dp"
        android:textSize="16sp"
        android:inputType="textPassword"
        android:layout_marginBottom="16dp"
        android:visibility="gone"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:background="@drawable/rounded_corners_primary"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:padding="10dp"
        android:textSize="16sp"
        android:inputType="textPassword"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        />

    <EditText
        android:id="@+id/password_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password_confirm"
        android:background="@drawable/rounded_corners_primary"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:padding="10dp"
        android:textSize="16sp"
        android:inputType="textPassword"
        android:layout_marginBottom="16dp"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/change_password"
        android:text="@string/change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners_primarydark"
        android:textColor="@color/white"
        android:layout_marginBottom="16dp"
        />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        />
</LinearLayout>