<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:background="@drawable/rounded_corners_gold"
    android:padding="16dp"
    android:layout_marginBottom="16dp">

    <TextView
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginBottom="8dp"
        />


    <RelativeLayout
        android:id="@+id/valid_end_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/type"
        android:background="@drawable/rounded_corners_translucent_white"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:layout_marginBottom="4dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_of_validity"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textColor="@color/white"
            android:text="@string/date"
            android:textSize="16sp"
            android:textStyle="bold"/>

    </RelativeLayout>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_below="@id/valid_end_rl"
        android:text="@string/tap_to_expand"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:background="@drawable/rounded_corners_translucent_white"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"/>

</RelativeLayout>