<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_corners_white"
    tools:context=".bottom_navigation.ui.store.BuyTicketActivity"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/kek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners_primarydark"
        android:padding="8dp">

        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textSize="12sp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/edit_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one"
            android:inputType="numberDecimal"
            android:textSize="16sp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <View
            android:id="@+id/buyline1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_quantity" />

        <TextView
            android:id="@+id/buy_valid_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valid_from"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buyline1" />

        <TextView
            android:id="@+id/buy_valid_from_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buyline1"
            android:onClick="setValidFrom"/>

        <View
            android:id="@+id/buyline2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buy_valid_from_date" />

        <TextView
            android:id="@+id/buy_valid_until"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valid_until"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buyline2" />

        <TextView
            android:id="@+id/buy_valid_until_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buyline2"
            android:onClick="setValidUntil"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/buy_pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_payable"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        android:layout_below="@id/kek"/>

    <TextView
        android:id="@+id/buy_pay_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_priceoftickets"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        android:layout_below="@id/kek"
        android:layout_alignParentEnd="true"/>

    <Button
        android:id="@+id/buy_pay_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pay"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        android:layout_below="@id/buy_pay"
        android:background="@drawable/rounded_corners_primarydark"/>

</RelativeLayout>