<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:scrollbars="vertical">

    <LinearLayout
        android:id="@+id/userdata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rounded_corners_turquoise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/qr"
        android:layout_marginBottom="16dp"
        android:padding="16dp"
        >

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/unknown"
            />

        <TextView
            android:id="@+id/idNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="normal"
            android:textColor="@color/white"
            android:text="@string/unknown"
            android:layout_marginBottom="16dp"
            />

    </LinearLayout>


    <Button
        android:id="@+id/start_vehicle_qr_scan"
        android:text="@string/get_vehicle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners_gold"
        android:textColor="@color/white"
        android:layout_marginBottom="16dp"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/start_ticket_qr_scan"
        android:text="@string/validate_ticket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners_primarydark"
        android:textColor="@color/white"
        android:layout_marginBottom="16dp"
        />

    <ImageView
        android:id="@+id/qr"
        android:scaleType="fitCenter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners_turquoise"
        android:layout_marginBottom="32dp"
        />

</LinearLayout>