<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".bottom_navigation.ui.home.viewpager.idpager.InspectActivity"
    android:orientation="vertical"
    android:scrollbars="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="8dp"
        android:layout_marginBottom="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="14sp"
            android:layout_alignParentStart="true"/>

        <TextView
            android:id="@+id/inspect_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="8dp"
        android:layout_marginBottom="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textSize="14sp"
            android:layout_alignParentStart="true"/>

        <TextView
            android:id="@+id/inspect_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="8dp"
        android:layout_marginBottom="4dp">

        <TextView
            android:id="@+id/_inspect_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id_card"
            android:textSize="14sp"
            android:layout_alignParentStart="true"/>

        <TextView
            android:id="@+id/inspect_idcard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/_inspect_id"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/inspect_rl_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green_OK"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textSize="14sp"
            android:layout_alignParentStart="true"/>

        <TextView
            android:id="@+id/inspect_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/inspect_tickets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/listitem_usertickets"/>

</LinearLayout>