<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".bottom_navigation.ui.home.viewpager.validticketspager.UserTicketActivity"
    android:padding="16dp"
    android:background="@color/gold"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp">

        <RelativeLayout
            android:id="@+id/rl_id_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners_translucent_white"
            android:padding="8dp"
            android:layout_marginBottom="8dp"
            >

            <TextView
                android:id="@+id/_id_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id_number"
                android:textColor="@color/white"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/ticket_id_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/_id_number"
                android:layout_alignParentEnd="true"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAlignment="textEnd"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_valid_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_id_number"
            android:background="@drawable/rounded_corners_translucent_white"
            android:padding="8dp"
            android:layout_marginBottom="8dp"
            >
            <TextView
                android:id="@+id/_valid_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/valid_from"
                android:textColor="@color/white"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/ticket_valid_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/_valid_from"
                android:layout_alignParentEnd="true"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAlignment="textEnd"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_valid_from"
            android:background="@drawable/rounded_corners_translucent_white"
            android:padding="8dp"
            android:layout_marginBottom="8dp"
            >

            <TextView
                android:id="@+id/_valid_until"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/valid_until"
                android:textColor="@color/white"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/ticket_valid_until"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/_valid_until"
                android:layout_alignParentEnd="true"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAlignment="textEnd"/>

        </RelativeLayout>


    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="300dp"
        android:layout_height="5dp"
        android:contentDescription="@string/dotted_line_divider"
        android:layerType="software"
        android:src="@drawable/dotted_line"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ticket_qr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        android:contentDescription="@string/qr_code"
        android:scaleType="fitCenter"/>




</androidx.constraintlayout.widget.ConstraintLayout>